--- a/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
@@ -1,181 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BLO-qI-HXl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--Ingredient DetailVC-->
-        <scene sceneID="bUi-3c-iqr">
-            <objects>
-                <viewController storyboardIdentifier="IngredientDetailVC" modalPresentationStyle="fullScreen" id="BLO-qI-HXl" customClass="IngredientDetailVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="3JZ-k5-dKV">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nOh-FA-fk9">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="nameCell" rowHeight="70" id="KBC-N1-oRA" customClass="IngredientNameCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KBC-N1-oRA" id="bi0-Ko-2gQ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="성분 이름은 여기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2px-Jw-eGj">
-                                                    <rect key="frame" x="18" y="5" width="118.5" height="60"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="60" id="MAB-Sg-COu"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="18"/>
-                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="2px-Jw-eGj" firstAttribute="leading" secondItem="bi0-Ko-2gQ" secondAttribute="leading" constant="18" id="5PS-xf-Wxv"/>
-                                                <constraint firstAttribute="bottom" secondItem="2px-Jw-eGj" secondAttribute="bottom" constant="5" id="aHz-Jz-0rw"/>
-                                                <constraint firstItem="2px-Jw-eGj" firstAttribute="top" secondItem="bi0-Ko-2gQ" secondAttribute="top" constant="5" id="vEE-2e-ZoN"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="nameLabel" destination="2px-Jw-eGj" id="mJ0-nC-Ul1"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="imageCell" rowHeight="160" id="MqB-D2-cI5" customClass="IngredientImageCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="98" width="375" height="160"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MqB-D2-cI5" id="XGm-qO-Cb0">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Tv-Em-UKp">
-                                                    <rect key="frame" x="18" y="0.0" width="339" height="160"/>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </imageView>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="2Tv-Em-UKp" firstAttribute="top" secondItem="XGm-qO-Cb0" secondAttribute="top" id="9QJ-hO-Sn5"/>
-                                                <constraint firstAttribute="bottom" secondItem="2Tv-Em-UKp" secondAttribute="bottom" id="QIU-dk-SlH"/>
-                                                <constraint firstItem="2Tv-Em-UKp" firstAttribute="leading" secondItem="XGm-qO-Cb0" secondAttribute="leading" constant="18" id="Uob-0K-sdD"/>
-                                                <constraint firstAttribute="trailing" secondItem="2Tv-Em-UKp" secondAttribute="trailing" constant="18" id="XXe-ko-4t0"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="ingredientImage" destination="2Tv-Em-UKp" id="fag-Z4-EHJ"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="explainCell" rowHeight="80" id="o4t-hK-uCh" customClass="IngredientExplainCell" customModule="CareDirection" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="258" width="375" height="80"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="o4t-hK-uCh" id="pdl-Bt-MbM">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7uK-H2-862">
-                                                    <rect key="frame" x="18" y="10" width="342" height="60"/>
-                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Thin" family="Apple SD Gothic Neo" pointSize="17"/>
-                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="7uK-H2-862" secondAttribute="trailing" constant="15" id="873-SS-naS"/>
-                                                <constraint firstItem="7uK-H2-862" firstAttribute="top" secondItem="pdl-Bt-MbM" secondAttribute="top" constant="10" id="8Xp-6A-0jq"/>
-                                                <constraint firstAttribute="bottom" secondItem="7uK-H2-862" secondAttribute="bottom" constant="10" id="F2S-81-H9y"/>
-                                                <constraint firstItem="7uK-H2-862" firstAttribute="leading" secondItem="pdl-Bt-MbM" secondAttribute="leading" constant="18" id="sKk-Vo-iyC"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="explainLabel" destination="7uK-H2-862" id="Igr-48-Gzp"/>
-                                        </connections>
-                                    </tableViewCell>
-                                </prototypes>
-                                <sections/>
-                                <connections>
-                                    <outlet property="dataSource" destination="BLO-qI-HXl" id="obY-lt-qSp"/>
-                                </connections>
-                            </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8P1-Od-oj3">
-                                <rect key="frame" x="122" y="613" width="130" height="34"/>
-                                <color key="backgroundColor" red="0.0" green="0.64705882349999999" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="97X-Fb-iTZ"/>
-                                    <constraint firstAttribute="width" constant="130" id="UeS-Nz-eoH"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
-                                <state key="normal" title="제품 보러가기">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="string" keyPath="heroID" value="Study"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabledForSubviews" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                                <connections>
-                                    <action selector="goToProductClick:" destination="BLO-qI-HXl" eventType="touchUpInside" id="D6H-lO-AcB"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tvh-fG-2fy">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ixQ-pq-pni">
-                                        <rect key="frame" x="11" y="31" width="28" height="28"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="icBack"/>
-                                        <connections>
-                                            <action selector="backButtonClick:" destination="BLO-qI-HXl" eventType="touchUpInside" id="a3h-S5-kGn"/>
-                                        </connections>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="성분" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K81-Pj-ASU">
-                                        <rect key="frame" x="172" y="31" width="30" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="tvh-fG-2fy" secondAttribute="height" multiplier="125:22" id="Phv-iH-8SY"/>
-                                </constraints>
-                            </view>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="cFA-8b-zqq" firstAttribute="trailing" secondItem="tvh-fG-2fy" secondAttribute="trailing" id="4Se-9k-8aU"/>
-                            <constraint firstItem="tvh-fG-2fy" firstAttribute="top" secondItem="cFA-8b-zqq" secondAttribute="top" id="5v5-eL-2RO"/>
-                            <constraint firstItem="cFA-8b-zqq" firstAttribute="trailing" secondItem="8P1-Od-oj3" secondAttribute="trailing" constant="123" id="8DF-2z-LTr"/>
-                            <constraint firstItem="tvh-fG-2fy" firstAttribute="leading" secondItem="cFA-8b-zqq" secondAttribute="leading" id="9EX-IN-zEV"/>
-                            <constraint firstItem="nOh-FA-fk9" firstAttribute="leading" secondItem="cFA-8b-zqq" secondAttribute="leading" id="Gzr-Qf-2wI"/>
-                            <constraint firstItem="cFA-8b-zqq" firstAttribute="bottom" secondItem="8P1-Od-oj3" secondAttribute="bottom" constant="20" id="OcE-sB-HNE"/>
-                            <constraint firstItem="8P1-Od-oj3" firstAttribute="leading" secondItem="cFA-8b-zqq" secondAttribute="leading" constant="122" id="YBE-Oh-noW"/>
-                            <constraint firstItem="nOh-FA-fk9" firstAttribute="top" secondItem="cFA-8b-zqq" secondAttribute="top" constant="64" id="iLE-AA-d5U"/>
-                            <constraint firstItem="nOh-FA-fk9" firstAttribute="bottom" secondItem="cFA-8b-zqq" secondAttribute="bottom" id="qO5-KW-SEt"/>
-                            <constraint firstItem="nOh-FA-fk9" firstAttribute="trailing" secondItem="cFA-8b-zqq" secondAttribute="trailing" id="x4R-4O-fyn"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="cFA-8b-zqq"/>
-                    </view>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="string" keyPath="heroModalAnimationTypeString" value="Study"/>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="isHeroEnabled" value="YES"/>
-                    </userDefinedRuntimeAttributes>
-                    <connections>
-                        <outlet property="goToProductButton" destination="8P1-Od-oj3" id="91i-s0-e98"/>
-                        <outlet property="ingredientTableView" destination="nOh-FA-fk9" id="JCo-gS-Gab"/>
-                        <outlet property="navigationBar" destination="tvh-fG-2fy" id="fOT-3s-BGZ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mkO-Lh-vCJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-68" y="49.925037481259373"/>
-        </scene>
-    </scenes>
-    <resources>
-        <image name="icBack" width="28" height="28"/>
-    </resources>
+    <scenes/>
 </document>
