--- a/CareDirection/CareDirection/Resources/Storyboard/TakingProductPopUp.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/TakingProductPopUp.storyboard
@@ -19,23 +19,20 @@
                                 <rect key="frame" x="46" y="140" width="283" height="387"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="향상된 크릴 플러스 오메가-3" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lY-DR-G4R">
-                                        <rect key="frame" x="41" y="39" width="201" height="22"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="22" id="Tkb-Qj-I8v"/>
-                                        </constraints>
+                                        <rect key="frame" x="41" y="39" width="201" height="4.5"/>
                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Iav-sq-hzj">
-                                        <rect key="frame" x="89.5" y="77" width="104" height="104"/>
+                                        <rect key="frame" x="89.5" y="59.5" width="104" height="104"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="104" id="EB9-9h-ei2"/>
                                             <constraint firstAttribute="width" constant="104" id="kjd-ZC-f3q"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="zTL-KK-tb6">
-                                        <rect key="frame" x="28" y="207" width="227" height="81"/>
+                                        <rect key="frame" x="28" y="189.5" width="227" height="81"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="FoE-oM-7b4">
                                                 <rect key="frame" x="0.0" y="0.0" width="227" height="17"/>
@@ -113,9 +110,12 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="81" id="kIT-yx-h6f"/>
+                                        </constraints>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fpX-kY-6p4">
-                                        <rect key="frame" x="0.0" y="328" width="283" height="0.5"/>
+                                        <rect key="frame" x="0.0" y="310.5" width="283" height="0.5"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="283" id="00j-Av-v2L"/>
@@ -123,7 +123,7 @@
                                         </constraints>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="91" translatesAutoresizingMaskIntoConstraints="NO" id="8mM-Wt-Fa9">
-                                        <rect key="frame" x="36" y="333" width="211" height="44"/>
+                                        <rect key="frame" x="36" y="327" width="211" height="44"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fxo-dX-VIq">
                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="44"/>
@@ -157,17 +157,18 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
+                                    <constraint firstItem="8mM-Wt-Fa9" firstAttribute="top" secondItem="fpX-kY-6p4" secondAttribute="bottom" constant="16" id="Bvv-73-Wa5"/>
                                     <constraint firstItem="fpX-kY-6p4" firstAttribute="top" secondItem="zTL-KK-tb6" secondAttribute="bottom" constant="40" id="OiK-OY-UwI"/>
                                     <constraint firstItem="zTL-KK-tb6" firstAttribute="centerX" secondItem="tDl-Ba-snb" secondAttribute="centerX" id="Qwi-hg-RH3"/>
                                     <constraint firstItem="1lY-DR-G4R" firstAttribute="leading" secondItem="tDl-Ba-snb" secondAttribute="leading" constant="41" id="RXF-hJ-q8j"/>
                                     <constraint firstItem="zTL-KK-tb6" firstAttribute="top" secondItem="Iav-sq-hzj" secondAttribute="bottom" constant="26" id="VPr-m6-5oJ"/>
-                                    <constraint firstItem="1lY-DR-G4R" firstAttribute="bottom" secondItem="Iav-sq-hzj" secondAttribute="top" constant="-16" id="XLs-Ls-D8g"/>
+                                    <constraint firstItem="Iav-sq-hzj" firstAttribute="top" secondItem="1lY-DR-G4R" secondAttribute="bottom" constant="16" id="XLs-Ls-D8g"/>
                                     <constraint firstAttribute="trailing" secondItem="1lY-DR-G4R" secondAttribute="trailing" constant="41" id="Yvr-lP-Vz6"/>
                                     <constraint firstItem="Iav-sq-hzj" firstAttribute="centerX" secondItem="tDl-Ba-snb" secondAttribute="centerX" id="anE-Fe-8zT"/>
                                     <constraint firstItem="1lY-DR-G4R" firstAttribute="centerX" secondItem="tDl-Ba-snb" secondAttribute="centerX" id="bEd-vz-VfY"/>
+                                    <constraint firstAttribute="bottom" secondItem="8mM-Wt-Fa9" secondAttribute="bottom" constant="16" id="hO8-x0-vnf"/>
                                     <constraint firstItem="fpX-kY-6p4" firstAttribute="centerX" secondItem="tDl-Ba-snb" secondAttribute="centerX" id="jha-gK-lcD"/>
                                     <constraint firstItem="1lY-DR-G4R" firstAttribute="top" secondItem="tDl-Ba-snb" secondAttribute="top" constant="39" id="jyQ-PT-wlW"/>
-                                    <constraint firstItem="8mM-Wt-Fa9" firstAttribute="top" secondItem="fpX-kY-6p4" secondAttribute="bottom" constant="4.5" id="lkj-fu-SIG"/>
                                     <constraint firstItem="8mM-Wt-Fa9" firstAttribute="centerX" secondItem="tDl-Ba-snb" secondAttribute="centerX" id="ras-Vp-tOd"/>
                                 </constraints>
                             </view>
