--- a/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Ingredient.storyboard
@@ -3,6 +3,140 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Ingredient DetailVC-->
+        <scene sceneID="zNi-VC-W7n">
+            <objects>
+                <viewController id="tFN-ai-dwh" customClass="IngredientDetailVC" customModule="CareDirection" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wgn-bn-Jgn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6a3-co-Hn6">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="성분" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1ta-bb-yXM">
+                                        <rect key="frame" x="32" y="34" width="311" height="22"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="17"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5JG-5t-zHs">
+                                        <rect key="frame" x="7" y="22" width="44" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button" image="icBack"/>
+                                        <connections>
+                                            <action selector="backButtonClick:" destination="tFN-ai-dwh" eventType="touchUpInside" id="Lft-0S-msh"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aZz-Tm-She">
+                                <rect key="frame" x="18" y="74" width="339" height="593"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="uKN-AC-rbF">
+                                        <rect key="frame" x="0.0" y="28" width="339" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uKN-AC-rbF" id="LPk-6c-JR8">
+                                            <rect key="frame" x="0.0" y="0.0" width="339" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CI0-Fm-lsv">
+                                                    <rect key="frame" x="0.0" y="6" width="339" height="33"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="339" id="dc6-LR-bXh"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="17"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="CI0-Fm-lsv" secondAttribute="bottom" constant="5" id="1W2-wm-D6b"/>
+                                                <constraint firstItem="CI0-Fm-lsv" firstAttribute="top" secondItem="LPk-6c-JR8" secondAttribute="top" constant="6" id="ECl-Rf-UCU"/>
+                                                <constraint firstItem="CI0-Fm-lsv" firstAttribute="leading" secondItem="LPk-6c-JR8" secondAttribute="leading" id="Pgz-fm-ycC"/>
+                                                <constraint firstAttribute="bottom" secondItem="CI0-Fm-lsv" secondAttribute="bottom" constant="5" id="PqI-lS-dmH"/>
+                                                <constraint firstAttribute="trailing" secondItem="CI0-Fm-lsv" secondAttribute="trailing" id="efQ-BI-BHn"/>
+                                                <constraint firstItem="CI0-Fm-lsv" firstAttribute="top" secondItem="LPk-6c-JR8" secondAttribute="top" constant="6" id="kU2-0W-aYp"/>
+                                                <constraint firstAttribute="trailing" secondItem="CI0-Fm-lsv" secondAttribute="trailing" id="mc1-7q-3HL"/>
+                                                <constraint firstItem="CI0-Fm-lsv" firstAttribute="leading" secondItem="LPk-6c-JR8" secondAttribute="leading" id="mtq-4f-3wo"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="160" id="PqR-eU-KVB">
+                                        <rect key="frame" x="0.0" y="72" width="339" height="160"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PqR-eU-KVB" id="fEv-ed-onv">
+                                            <rect key="frame" x="0.0" y="0.0" width="339" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="iZ3-s4-Reo">
+                                        <rect key="frame" x="0.0" y="232" width="339" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iZ3-s4-Reo" id="usm-M6-zJF">
+                                            <rect key="frame" x="0.0" y="0.0" width="339" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmy-QT-9WH">
+                                                    <rect key="frame" x="8" y="11" width="36" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="tFN-ai-dwh" id="tiJ-sF-23K"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OeX-RD-85A">
+                                <rect key="frame" x="123" y="561" width="130" height="34"/>
+                                <color key="backgroundColor" red="0.0" green="0.64705882349999999" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="5mI-z7-GIA"/>
+                                    <constraint firstAttribute="width" constant="130" id="fhK-Rq-2bN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="14"/>
+                                <state key="normal" title="제품 보러가기">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToProductClick:" destination="tFN-ai-dwh" eventType="touchUpInside" id="pRx-ae-ups"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fOW-MI-Xz0" firstAttribute="trailing" secondItem="OeX-RD-85A" secondAttribute="trailing" constant="122" id="1Nj-Om-9EE"/>
+                            <constraint firstItem="OeX-RD-85A" firstAttribute="leading" secondItem="fOW-MI-Xz0" secondAttribute="leading" constant="123" id="HIz-Zk-YA4"/>
+                            <constraint firstItem="fOW-MI-Xz0" firstAttribute="bottom" secondItem="OeX-RD-85A" secondAttribute="bottom" constant="72" id="syq-SQ-xYF"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fOW-MI-Xz0"/>
+                    </view>
+                    <connections>
+                        <outlet property="goToProductButton" destination="OeX-RD-85A" id="DfI-Dl-pFR"/>
+                        <outlet property="ingredientTableView" destination="aZz-Tm-She" id="DCq-zi-RFh"/>
+                        <outlet property="navigationBar" destination="6a3-co-Hn6" id="z88-TC-vGQ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Gh-kc-hjD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-52" y="-84.107946026986511"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="icBack" width="28" height="28"/>
+    </resources>
 </document>
