--- a/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Home.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxP-ub-Md2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxP-ub-Md2">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -367,6 +367,24 @@
                                                     <constraint firstAttribute="width" secondItem="z6e-8r-H3T" secondAttribute="height" multiplier="75:62" id="pP0-gr-7QP"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bHZ-XT-vKI">
+                                                <rect key="frame" x="18" y="470" width="338" height="184"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="아직 케어받는 기능이 없어요!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kbv-Nk-4wB">
+                                                        <rect key="frame" x="72" y="123" width="195" height="21"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="17"/>
+                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icSelected" translatesAutoresizingMaskIntoConstraints="NO" id="6NO-Nf-QLw">
+                                                        <rect key="frame" x="144" y="40" width="50" height="50"/>
+                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AoQ-Z5-bbg">
                                                 <rect key="frame" x="0.0" y="688" width="375" height="265"/>
                                                 <subviews>
@@ -521,8 +539,8 @@
                                                                     <action selector="settingButtonClick:" destination="J9C-3r-fs6" eventType="touchUpInside" id="hXt-39-mxR"/>
                                                                 </connections>
                                                             </button>
-                                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rK-2w-aMI">
-                                                                <rect key="frame" x="154" y="19" width="52" height="24"/>
+                                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7rK-2w-aMI">
+                                                                <rect key="frame" x="73" y="19" width="133" height="24"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                 <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="20"/>
                                                                 <state key="normal" title="박진오">
@@ -670,6 +688,7 @@
                         <outlet property="ingredientView" destination="LNl-RB-adI" id="ZEv-Ly-pHW"/>
                         <outlet property="navigationBar" destination="8p9-cv-p2H" id="0Np-ID-RdC"/>
                         <outlet property="noRegistView" destination="E4O-cb-RZq" id="bRv-rt-OmO"/>
+                        <outlet property="noShowView" destination="bHZ-XT-vKI" id="f1a-5U-z6R"/>
                         <outlet property="productCollectionView" destination="DcR-AS-LdF" id="TvA-3M-ICz"/>
                         <outlet property="scrollView" destination="g3m-CI-GcF" id="cyC-dl-pnL"/>
                         <outlet property="showDetailFunction" destination="KDa-jM-5c3" id="OKB-2O-Abe"/>
@@ -788,6 +807,7 @@
         <image name="homeIcUnselected" width="28" height="28"/>
         <image name="ic" width="9" height="5"/>
         <image name="icPlus" width="28" height="28"/>
+        <image name="icSelected" width="20" height="20"/>
         <image name="lineBlue" width="311.5" height="1.5"/>
         <image name="lineRed" width="311.5" height="1.5"/>
         <image name="productIcUnselected" width="28" height="28"/>
